--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Hello, world!</title>
+    <title>Bootstrap Boilerplate</title>
   </head>
   <body>
     <h1>Hello, world!</h1>
